--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Blackjack Game</title>
-        <link href="css/style.css" rel="stylesheet" />
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
         <h1>Blackjack</h1>
-        <p>Want to play a round?</p>
+        <p id="message-el">Want to play a round?</p>
         <p>Cards:</p>
         <p>Sum:</p>
         <button>START GAME</button>
