--- a/blackjack-game/index.html
+++ b/blackjack-game/index.html
@@ -7,10 +7,11 @@
     <body>
         <h1>Blackjack</h1>
         <p id="message-el">Want to play a round?</p>
-        <p>Cards:</p>
-        <p>Sum:</p>
-        <button>START GAME</button>
-        <button>NEW CARD</button>
+        <p id="cards-el">Cards:</p>
+        <p id="sum-el">Sum:</p>
+        <button onclick="startGame()">START GAME</button>
+        <button onclick="newCard()">NEW CARD</button>
+        <p id="player-el"></p>
         <script src="index.js"></script>
     </body>
 </html>
