Header styling completed

--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -3,10 +3,24 @@
     <head>
         <title>Password Generator</title>
         <link href="index.css" rel="stylesheet">
+        <!-- for fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Karla:wght@800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1>Generate a random password</h1>
-        <p>Never use an insecure password again.</p>
-        <button>Generate passwords</button>
+        <header>
+            <h1>Generate a <span>random password</span></h1>
+            <h2>Never use an insecure password again.</h2>
+            <button>Generate passwords</button>
+        </header>
+
+        <main>
+            <p></p>
+            <p></p>
+        </main>
+
+        <script src="index.js"></script>
     </body>
 </html>
