--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -13,12 +13,12 @@
         <header>
             <h1>Generate a <span>random password</span></h1>
             <h2>Never use an insecure password again.</h2>
-            <button>Generate passwords</button>
+            <button onclick="getPasswords()">Generate passwords</button>
         </header>
 
         <main>
-            <p></p>
-            <p></p>
+            <p id="password1-el"></p>
+            <p id="password2-el"></p>
         </main>
 
         <script src="index.js"></script>
