Display message when password copied

--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -21,7 +21,9 @@
             <button id="password2-el" onclick="copyPassword(this.id)"></button>
         </main>
 
-        <p id="message-el"></p>
+        <footer>
+            <p id="message-el"></p>
+        </footer>
 
         <script src="index.js"></script>
     </body>
