Allow user to input desired password length

--- a/password-generator/index.html
+++ b/password-generator/index.html
@@ -13,7 +13,10 @@
         <header>
             <h1>Generate a <span>random password</span></h1>
             <h2>Never use an insecure password again.</h2>
-            <button id="generate-el" onclick="getPasswords()">Generate passwords</button>
+            <p>Input password length:
+                <input type="text" id="length">
+            </p>
+            <input type="button" id="generate-el" onclick="getPasswords()" value="Generate passwords"></button>
         </header>
 
         <main>
