--- a/basketball-scoreboard/index.html
+++ b/basketball-scoreboard/index.html
@@ -8,9 +8,24 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
+                <p>0</p>
+
+                <div>
+                    <button>+1</button>
+                    <button>+2</button>
+                    <button>+3</button>
+                </div>
             </div>
+
             <div>
                 <h3>GUEST</h3>
+                <p>0</p>
+
+                <div>
+                    <button>+1</button>
+                    <button>+2</button>
+                    <button>+3</button>
+                </div>
             </div>
         </div>
         <script src="index.js"></script>
