Added ability to increase scores

--- a/basketball-scoreboard/index.html
+++ b/basketball-scoreboard/index.html
@@ -8,23 +8,23 @@
         <div class="container">
             <div>
                 <h3>HOME</h3>
-                <p>0</p>
+                <p id="home-el">0</p>
 
                 <div>
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                    <button id="home1-btn" onclick="addScore(this.id)">+1</button>
+                    <button id="home2-btn" onclick="addScore(this.id)">+2</button>
+                    <button id="home3-btn" onclick="addScore(this.id)">+3</button>
                 </div>
             </div>
 
             <div>
                 <h3>GUEST</h3>
-                <p>0</p>
+                <p id="guest-el">0</p>
 
                 <div>
-                    <button>+1</button>
-                    <button>+2</button>
-                    <button>+3</button>
+                    <button id="guest1-btn" onclick="addScore(this.id)">+1</button>
+                    <button id="guest2-btn" onclick="addScore(this.id)">+2</button>
+                    <button id="guest3-btn" onclick="addScore(this.id)">+3</button>
                 </div>
             </div>
         </div>
