--- a/unit-converter/index.html
+++ b/unit-converter/index.html
@@ -6,16 +6,13 @@
         <!-- for Inter font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
             <h1>Metric/Imperial unit conversion</h1>
-            <h2 id="value">0</h2>
-            <h3>
-                Input number: <input type="text" id="number">
-                <input type="button" onclick="submit()" value="Sumbit">
-            </h3>
+            <h2 id="num">20</h2>
+            <button id="convert-btn">Convert</button>
         </header>
         
         <main>
