--- a/unit-converter/index.html
+++ b/unit-converter/index.html
@@ -11,7 +11,8 @@
     <body>
         <header>
             <h1>Metric/Imperial unit conversion</h1>
-            <h2 id="num">20</h2>
+            <input type="text" id="num">
+            <br>
             <button id="convert-btn">Convert</button>
         </header>
         
