--- a/passenger-counter/index.html
+++ b/passenger-counter/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Passenger Counter</title>
+        <title>Row Counter</title>
         <link href="index.css" rel="stylesheet">
     </head>
     <body>
-        <h1>People entered:</h1>
-        <h2 id="count-el">0</h2>
-        <button id="increment-btn" onclick="increment()">INCREMENT</button>
-        <button id="save-btn" onclick="save()">SAVE</button>
-        <p id="save-el">Previous entries: </p>
+        <div class="container">
+            <h1>Row Counter</h1>
+            <h2 id="count-el">0</h2>
+            <button id="increment-btn" onclick="increment()">INCREMENT</button>
+            <button id="save-btn" onclick="save()">SAVE</button>
+            <p id="save-el">Previous entries: </p>
+        </div>
         <script src="index.js">
 
         </script>
