refactor unit converter

--- a/unit-converter/index.html
+++ b/unit-converter/index.html
@@ -9,35 +9,26 @@
         <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;800&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1>Metric/Imperial unit conversion</h1>
-            <input type="text" id="num">
+        <div class="hero">
+            <h1>Metric/Imperial Unit Conversion</h1>
+            <input id="input" type="text" placeholder="0" maxlength="7">
             <br>
             <button id="convert-btn">Convert</button>
-        </header>
-        
-        <main>
-            <div class="conversions">
-                <!-- conversion 1 -->
-                <div class="conversion">
-                    <h3>Length (Meter/Feet)</h3>
-                    <p id="m-ft">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
-                </div>
-
-                <!-- conversion 2 -->
-                <div class="conversion">
-                    <h3>Volume (Liters/Gallons)</h3>
-                    <p id="l-gal">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
-                </div>
-
-                <!-- conversion 3 -->
-                <div class="conversion">
-                    <h3>Mass (Kilograms/Pounds)</h3>
-                    <p id="kg-lbs">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
-                </div>
-            </div> <!-- conversions -->
-        </main>
-
+        </div>
+        <div class="main">
+            <div class="section">
+                <h3>Length (Meter/Feet)</h3>
+                <p id="length-el">0 meters = 0.000 feet | 0 feet = 0.000 meters</p>
+            </div>
+            <div class="section">
+                <h3>Volume (Liters/Gallons)</h3>
+                <p id="volume-el">0 liters = 0.000 gallons | 0 gallons = 0.000 liters</p>
+            </div>
+            <div class="section">
+                <h3>Mass (Kilograms/Pounds)</h3>
+                <p id="mass-el">0 kilos = 0.000 pounds | 0 pounds = 0.000 kilos</p>
+            </div>
+        </div>
         <script src="index.js"></script>
     </body>
 </html>
