--- a/mobile-ordering-app/index.html
+++ b/mobile-ordering-app/index.html
@@ -1,9 +1,68 @@
+<!DOCTYPE html>
 <html>
+
     <head>
-       <link rel="stylesheet" href="index.css">
+        <!-- CSS -->
+        <title>Jimmy's Diner</title>
+        <link rel="stylesheet" href="index.css">
+        <!-- Google Fonts -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Smythe&display=swap" rel="stylesheet">
     </head>
+    
     <body>
-	<script src="index.js"></script>
+        <header>
+            <div class="header-text">
+                <h1>Jimmy’s Diner</h1>
+                <h2>The best burgers and pizzas in town.</h2>
+            </div>
+        </header>
+
+        <main>
+            <section class="menu-container" id="menu-container">
+                <!-- Menu here!! -->
+            </section>
+
+            <section class="order-container" id="order-container">
+                <!-- Order here!! -->
+            </section>
+        </main>
+        
+        <div class="payment-modal" id="payment-modal">
+            <div class="payment-modal-inner" id="payment-modal-inner">
+                <h2 class="payment-modal-title">Enter card details</h2>
+                <form class="payment-form" id="payment-form">
+                    <input
+                        type="text"
+                        name="fullName"
+                        placeholder="Enter your name"
+                        aria-label="Full name"
+                        required/>
+                    <input
+                        type="text"
+                        name="cardNumber"
+                        placeholder="Enter card number"
+                        aria-label="Card number"
+                        minlength="13"
+                        maxlength="19"
+                        required/>
+                    <input
+                        type="text"
+                        name="cvvNumber"
+                        placeholder="Enter CVV"
+                        aria-label="CVV number"
+                        maxlength="4"
+                        required/>
+                    <div class="payment-modal-btns">
+                        <button class="pay-btn" id="pay-btn" type="submit">Pay</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+
+	    <script src="index.js" type="module"></script>
     </body>
+
 </html>
 
