--- a/movie-watchlist/watchlist.html
+++ b/movie-watchlist/watchlist.html
@@ -16,17 +16,21 @@
         <header>
             <div class="site-header container">
                 <h1>My Watchlist</h1>
+                <!-- TODO: change colour on hover -->
                 <a href="index.html">Search for movies</a>
             </div>
         </header>
         <main>
+            <!-- TODO: decrease margin height -->
             <div class="movies container" id="watchlist">
+                <!-- TODO: centre on page -->
                 <div class="placeholder">
                     <p class="placeholder-text">Your watchlist is looking a little empty...</p>
-                    <p>
+                    <!-- TODO: add margin here -->
+                    <a href="index.html">
                         <i class="fa-solid fa-circle-plus"></i>
                         Let's add some movies!
-                    </p>
+                    </a>
                 </div>
             </div>
         </main>
