log user purchases to console

--- a/golddigger/public/index.html
+++ b/golddigger/public/index.html
@@ -20,13 +20,13 @@
         <img src="gold.png" alt="gold bars and nuggets">
         <section class="price-info-container">
             <p>$<span id="price-display" class="price" aria-live="assertive">----.--</span> / Oz*</p>
-            <p id="connection-status" class="status" aria-live="polite">Live Price 🟢</p>
+            <p id="connection-status" class="status" aria-live="polite">Disconnected 🔴</p>
         </section>
         <form id="investmentForm">
             <label for="investment-amount">Amount to invest</label>
             <div class="input-container">
                 <div class="currency">$</div>
-                <input type="number" id="investment-amount" placeholder="100.00" required>
+                <input type="number" id="investment-amount" placeholder="100.00" min=1 required>
             </div>
             <button type="submit" id="invest-btn" class="invest-btn" aria-label="Invest in gold now">Invest Now!</button>
         </form>
